--- a/Content/Conclusion/extremeProgramming.tex
+++ b/Content/Conclusion/extremeProgramming.tex
@@ -1,22 +1,39 @@
 \section{Extreme Programming}
-We chose to use XP because it is a methodology that is aimed towards managing the development process both in regards to organisation and programming. In this section we will try to answer the third problem presented in \Cref{chap:intro}:
+We chose to use XP because it is a methodology that is aimed towards managing the development process both in regards to organisation and programming. 
+In this section we will try to answer the third problem presented in \Cref{chap:intro}:
 \begin{center}
 	\textit{How do we adapt the structured systems development methodology, Extreme Programming, to our project?}
 \end{center}
 
-\noindent XP is not very complicated to understand, but using it is an entirely different thing. It is, for example, easy to start programming in pairs -- simply sit down two people with one computer and start programming -- but this is not all there is to pair programming. There are many variables to take into account, e.g. who should drive, and for how long? For some trivial tasks it may even be beneficial to not program in pairs at all; after all there usually is a deadline to meet.
+\noindent XP is not very complicated to understand, but using it is an entirely different thing. 
+It is, for example, easy to start programming in pairs -- simply sit down two people with one computer and start programming -- but this is not all there is to pair programming. 
+There are many variables to take into account, e.g. who should drive, and for how long? 
+For some trivial tasks it may even be beneficial to not program in pairs at all; after all there usually is a deadline to meet.
 
-But how do we adapt it, so it works for this particular project? The only way to do that is to start using it, and slowly change the things that do not work.
+But how do we adapt it, so it works for this particular project? 
+The only way to do that is to start using it, and slowly change the things that do not work.
 
 \Dan{Rewrite the part where we say that is the only way...}
 
 
-XP is meant for expert programmers, and in a project consisting only of students that is arguably not the case. In spite of this XP proved to be a useful tool for organizing the team and managing the expectations of how quickly something can be done. \Dan{Write something about XP being very efficient.} Additionally it allows for easily reprioritising of issues and possible change of direction. It does not provide tools to reliably predict the final cost of a system, but it does allow for relatively precise short term estimations, which is also more likely to be useful, as the customer's needs will most likely change before a long term goal is reached.
+XP is meant for expert programmers, and in a project consisting only of students that is arguably not the case. 
+In spite of this XP proved to be a useful tool for organizing the team and managing the expectations of how quickly something can be done. 
+\Dan{Write something about XP being very efficient.} 
+Additionally it allows for easily reprioritising of issues and possible change of direction. 
+It does not provide tools to reliably predict the final cost of a system, but it does allow for relatively precise short term estimations, which is also more likely to be useful, as the customer's needs will most likely change before a long term goal is reached.
 
-There are also things we could have done, that likely would have improved the process even more. Many of the different roles specified by XP were not always assigned, resulting in certain subtleties being missed. For example we lacked a customer to insist on getting a working product as soon as possible, making small releases feel like a less important thing to achieve. This results in fewer releases, which in turn influences several of the other practices, increasing the risk of something going wrong, which is exactly what we are trying to avoid with XP.
-Another problem is with testing: it is easy to do, but hard to do well. Writing good tests is difficult, and takes a lot of practice. At the same time testing is one of the more central practices, highly influencing the rest of the practices, making it significantly harder to \textit{be brave} and, for example, refactor -- thereby starting a vicious circle of problems. \Dan{Der mangler noget her.}
+There are also things we could have done, that likely would have improved the process even more. 
+Many of the different roles specified by XP were not always assigned, resulting in certain subtleties being missed. 
+For example we lacked a customer to insist on getting a working product as soon as possible, making small releases feel like a less important thing to achieve. 
+\Alexander{We did not lack a customer, we had a surrogate customer. This did cause problems, but remember to mention the surrogate customer.}
+This results in fewer releases, which in turn influences several of the other practices, increasing the risk of something going wrong, which is exactly what we are trying to avoid with XP.
+Another problem is with testing: it is easy to do, but hard to do well. 
+Writing good tests is difficult, and takes a lot of practice. 
+At the same time testing is one of the more central practices, highly influencing the rest of the practices, making it significantly harder to \textit{be brave} and, for example, refactor -- thereby starting a vicious circle of problems.
+ \Dan{Der mangler noget her.}
 
-In conclusion, XP can be adapted by using it, and it should be continuously adapted to fit the project's needs. There is always something that can be done to make it work a little bit better, while still adhering to the main practices.
+In conclusion, XP can be adapted by using it, and it should be continuously adapted to fit the project's needs. 
+There is always something that can be done to make it work a little bit better, while still adhering to the main practices.
 
 
 
