Wrote 1st release and 1st iteration in chap 4

--- a/Content/Iteration/introduction.tex
+++ b/Content/Iteration/introduction.tex
@@ -1,3 +1,4 @@
-Over the course of this project we been working in iterations of two weeks, which is approximately one week worth of work on the project. In this chapter we will cover the goals and findings of each iteration. Doing the project we had three releases each covering two iterations.
+Over the course of this project we have been working in iterations of two weeks, which is approximately one week worth of work on the project. To follow the practice \textit{small releases} there is one release for every two iterations. In this chapter we will cover the goals and findings of each release and iteration.
+Each release is described
 
-\Kristian{should be expanded}
+\Dan{Write something about Essence here}
