--- a/Content/Iteration/release1.tex
+++ b/Content/Iteration/release1.tex
@@ -1,4 +1,4 @@
 \input{Content/Iteration/release1Intro}
 \input{Content/Iteration/1stIteration}
 \input{Content/Iteration/2ndIteration}
-\input{Content/Iteration/methodologyObservations1}
+%\input{Content/Iteration/methodologyObservations1}
