--- a/Content/Iteration/release1Intro.tex
+++ b/Content/Iteration/release1Intro.tex
@@ -1,1 +1,5 @@
-\Dan{General stuff about the release here}
+When the project just started a formal release was not planned. We had a general idea of the core functionality of the application, and that is what we worked towards. During the first iteration we mostly researched how to build the application, but we considered the work that was done at the end of the 2nd iteration as a release. As we got more comfortable with XP and learned how to better make use of short releases, around 3rd iteration, we started planning actual releases, and backtracked the first ``release'' from the 2nd iteration. This resulted in the following description of the 1st release:
+
+\textit{The application should be able to handle playing music and navigating a play list, using a graphical user interface.}
+
+This release is slightly smaller than the following, as its main purpose was to get the application prepared for the next releases. Because the release is as simple as it is, it is not analysed further.
