--- a/Content/ReflectionMethodology/reflectionPlanning.tex
+++ b/Content/ReflectionMethodology/reflectionPlanning.tex
@@ -10,3 +10,5 @@ A disadvantage of using the tool was that since much weight was put on detailed 
 As a result of our estimate reviews, we found a recurring pattern in our estimates. Trivial tasks were generally easy to estimate accurately. Smaller, one unit, tasks were more likely to exceed their estimate. Lastly, the big tasks, four plus units, were likely to be over-estimated with the exception of a few which grew bigger. We suspect this was because we should have decomposed the tasks further.
 
 Having big tasks with no specific goals, such as ongoing refactoring, did not work well, because they made us unproductive. Refactoring for example was later decomposed into concrete tasks which worked better.
+
+\Dan{Mention somewhere: Fragmentation of time.}
