Finished 2nd iteration

--- a/Content/Iteration/2ndIteration.tex
+++ b/Content/Iteration/2ndIteration.tex
@@ -1,4 +1,25 @@
 \subsection{2nd Iteration}
-Analyse BPM For Song ONLINE
-Music Player GUI 
-Database for songs
+At this point in time we had gotten a little bit more used to using XP, and we had a general idea of how it worked, but to strengthen our understanding, making it easier for us to adapt XP to our needs, we spent some time on reading about it.
+
+We had plenty of left over issues from 1st iteration, and except for a few minor additions we prioritised the issues once again and started working.
+
+%Pair programming and refactoring
+We found out during the 1st iteration that using a screen sharing application to do pair programming often resulted in the co-driver getting distracted and therefore not contributing. In this iteration we started only using one computer, and tried to sit in a way so the problem with viewing angles of monitors were as small as possible. We still had problems with some code being difficult to pair program due to lacking knowledge, so we agreed that when these cases came up, the pair would split up and each try to solve the problem, and then team up again when either found a good solution.
+
+When working on the code, we realised that the quality was not quite as we wanted it, and we decided to spend more time on refactoring in the future. We still had a deadline to meet, and we had not factored in much time for refactoring during the planning process, resulting in some bad smells being left behind.
+
+\Dan{Evaluer lidt mere på hvorfor det kunne være, at vi ikke fik refaktureret.}
+
+%40 hour work week
+The overall flow of the process improved, and the application was taking shape. It was, however, not taking shape quickly enough, and when we realised we would not be able to finish the release at the pace we were going, we decided to work overtime for a few days. This resulted in getting the job done, but it also reduced our motivation in the days after. Our productivity was lower in the day after, but the task at hand that day was a boring one as well.\\
+
+\Dan{Snak om det her, men pas på med at konkludere for meget - vi kan ikke rigtig sige hvorfor vi var mindre produktive.}
+
+%Planning
+When working on an issue, we found that it was some times hard to manually keep track on how much time was spent on it. This led to us eventually starting to use a time tracking tool, allowing us to more precisely find out how well each issue was estimated. At this point we were still not able to accurately determine our code velocity.\\
+
+During the first two iterations we were planning on only using 8 of the 12 practices, but at the end of this iteration we decided to include the last four, as doing so would not take much extra effort.
+
+%Analyse BPM For Song ONLINE
+%Music Player GUI 
+%Database for songs
