--- a/Bibliography/bibliography.bib
+++ b/Bibliography/bibliography.bib
@@ -101,7 +101,7 @@ eprint = {http://dx.doi.org/10.1076/apab.111.3.211.23464}
 
 @misc{android:sensor,
   title={Sensors Overview},
-  author={Google Android},
+  author={{Google Android}},
   year={2015},
   howpublished = "\url{http://developer.android.com/guide/topics/sensors/sensors_overview.html}",
   note = "[Online; Accessed 2015-04-21]"
@@ -109,7 +109,7 @@ eprint = {http://dx.doi.org/10.1076/apab.111.3.211.23464}
 
 @misc{android:terms,
   title={API Guide Glossary},
-  author={Google Android},
+  author={{Google Android}},
   year={2015},
   howpublished = "\url{https://developer.android.com/guide/appendix/glossary.html}",
   note = "[Online; Accessed 2015-05-18]"
@@ -117,10 +117,17 @@ eprint = {http://dx.doi.org/10.1076/apab.111.3.211.23464}
 
 @misc{android:fragment,
   title={Fragments},
-  author={Google Android},
+  author={{Google Android}},
   year={2015},
   howpublished = "\url{http://developer.android.com/guide/components/fragments.html}",
   note = "[Online; Accessed 2015-05-18]"
+}
+
+@misc{essence:config,
+  title={Essence - Pragmatic Software Innovation},
+  author={Ivan Aaen},
+  year={2015},
+  note = "Unpublished Book"
 }
 
 @book{xp:estimation,
@@ -157,7 +164,7 @@ eprint = {http://dx.doi.org/10.1076/apab.111.3.211.23464}
 
 @misc{android:test,
     title={Testing Fundamentals},
-    author={Google Android},
+    author={{Google Android}},
     year={2015},
     howpublished = "\url{http://developer.android.com/tools/testing/testing_android.html}",
     note = "[Online; Accessed 2015-05-19.]"
@@ -165,7 +172,7 @@ eprint = {http://dx.doi.org/10.1076/apab.111.3.211.23464}
 
 @misc{android:MediaPlayer,
     title={MediaPlayer},
-    author={Google Android},
+    author={{Google Android}},
     year={2015},
     howpublished = "\url{http://developer.android.com/reference/android/media/MediaPlayer.html}",
     note = "[Online; Accessed 2015-05-21.]"
