config talbe 2 added

--- a/Content/Conclusion/application.tex
+++ b/Content/Conclusion/application.tex
@@ -1,6 +1,6 @@
 \section{Application}
 %Current State:
-A android application was developed in this project to address the challenge put fourth in \cref{chap:intro}.
+A android application was developed in this project to address the challenges put fourth in \cref{chap:intro}.
 
 %Q1: 
 \begin{center}
@@ -10,14 +10,14 @@ The application can provide music matching a runners pace. This is achieved by r
 
 While the application can play music and has a good (within 10 percent of target) step detections it has shortcomings: 
 
-The GUI is not fully developed, it is possible to break the positioning of song in the cover flow. Unavailable information such tempo (BPM) makes songs unusable for matching with pace. The selecting of music does not scale well with the size of the music library. A small music library (6 to 10) makes it very hard to match tempo with pace. A Large music library (100+) makes the same 6 to 7 songs repeat, assuming a stable pace.
+The GUI is not fully developed, it is possible to break the positioning of song in the cover flow. Unavailable information such tempo (BPM) makes songs unusable for matching with pace. The selecting of music does not scale well with the size of the music library. A small music library (6 to 10) makes it very hard to match tempo with pace. 
 
 improvements to the application:
 \begin{itemize}
 \item Reading tempo from file, currently it relies solely on a online API to retrieve tempo.
 \subitem Alternatively analyse music file in order to discover tempo.
 \item Altering tempo live, could be helpful to small libraries.
-\item Manual edit of song data.
+\item Manual edit of song metadata. 
 \end{itemize}
 
 
