Finished 2nd config table

--- a/Content/Iteration/configurationTable1.tex
+++ b/Content/Iteration/configurationTable1.tex
@@ -37,7 +37,7 @@
 	& \parbox[t][][c]{0.20\textwidth}{ 
 	    \textit{Stakeholders} 
 		\begin{itemize}[leftmargin=*]
-		\item A runner who enjoy music.
+		\item A runner who enjoys music.
 		\end{itemize}
 	}
 	& \parbox[t][][c]{0.20\textwidth}{ 
@@ -80,9 +80,9 @@
 	& \parbox[t][][c]{0.20\textwidth}{ 
 		\textit{Components}
 		\begin{itemize}[leftmargin=*]
-		\item Music player. 
-		\item Music library. 
-		\item Step counter.
+		\item Music player
+		\item Music library
+		\item Step counter
 		\end{itemize}
 	}
 	& \parbox[t][][c]{0.20\textwidth}{ 
@@ -101,6 +101,6 @@
 		\end{itemize}
 	}\\ \hline     
 \end{tabular}
-\caption[Table caption text]{Table taken from }
+\caption[Table caption text]{Configuration table for 2nd release.}
 \label{table:config1}
 \end{table}
