--- a/Content/Iteration/configurationTable2.tex
+++ b/Content/Iteration/configurationTable2.tex
@@ -1,4 +1,4 @@
-\definecolor{darkGreen}{rgb}{0,0.5,0}
+\definecolor{darkGreen}{rgb}{0,0.4,0}
 \begin{table}
 \footnotesize
 \begin{tabular}{|l|l|l|l|l|} \hline
@@ -7,8 +7,8 @@
 	& \parbox[t][][c]{0.20\textwidth}{ 
 		\textit{Reflection}
 		\begin{itemize}[leftmargin=*]
-		\item \textbf{\color{darkGreen}Can we ease the interactions with a smartphone.}
-		\item Use context: Running while listening to music from a smartphone.
+		\item Challenge: Can we improve the running experience?
+		\item Use context: Running while listening to music from a smart phone.
 		\end{itemize}
 	}
 	& \parbox[t][][c]{0.20\textwidth}{ 
@@ -38,13 +38,14 @@
 	& \parbox[t][][c]{0.20\textwidth}{ 
 	    \textit{Stakeholders} 
 		\begin{itemize}[leftmargin=*]
-		\item A runner who enjoy music.
+		\item A runner who enjoys music.
 		\end{itemize}
 	}
 	& \parbox[t][][c]{0.20\textwidth}{ 
 		\textit{Design} 
 		\begin{itemize}[leftmargin=*]
 		\item Running pacer with music player-like design and functionalities.  
+		\item {\color{darkGreen} \textbf{Non-graphical UI making interaction possible without looking at the screen.}}
 		\end{itemize}
 	}
 	& \parbox[t][][c]{0.20\textwidth}{
@@ -76,14 +77,15 @@
 		\begin{itemize}[leftmargin=*]
 		\item Automatically fade into songs, which fit running pace.
 		\item Use personal collection of music files as a basis for exercise/running.
+		\item {\color{darkGreen} \textbf{Control the music player with taps, while the screen is turned off.}}
 		\end{itemize}
 	}
 	& \parbox[t][][c]{0.20\textwidth}{ 
 		\textit{Components}
 		\begin{itemize}[leftmargin=*]
-		\item Music player. 
-		\item Music library. 
-		\item Step counter.
+		\item Music player
+		\item Music library
+		\item Step counter
 		\end{itemize}
 	}
 	& \parbox[t][][c]{0.20\textwidth}{ 
@@ -92,16 +94,17 @@
 		\item Running pacer
 		\item Music player
 		\item Step counter
+		\item {\color{darkGreen}\textbf{Non-GUI based interaction}}
 		\end{itemize}
 	}
 	& \parbox[t][][c]{0.20\textwidth}{ 
 		\textit{Findings} 
 		\begin{itemize}[leftmargin=*]
-		\item Extracting BPM info from music files is difficult and unreliable. 
-		\item Controlling the device while running can be difficult.
+		\item {\color{darkGreen}\textbf{Lack of tactile feedback in non-graphical interface makes it harder to control.}}
+		\item {\color{darkGreen}\textbf{If the user stops moving, it may be nice if the song fitting the last stable SPM keeps playing.}}
 		\end{itemize}
 	}\\ \hline     
 \end{tabular}
-\caption[Table caption text]{Table taken from }
-\label{table:config1}
+\caption[Table caption text]{Configuration table for 3rd release.}
+\label{table:config2}
 \end{table}
