--- a/Content/Iteration/release3Intro.tex
+++ b/Content/Iteration/release3Intro.tex
@@ -1,3 +1,4 @@
 \Dan{General stuff about the release here}
-
+what were done: musicplayer, stepcounter, almost music library 
+what needed to be done: NGUI, online BPM
 \input{Content/Iteration/configurationTable2}
