--- a/Report.tex
+++ b/Report.tex
@@ -29,6 +29,7 @@
 \chapter{Tempo Player - The Tour}
 \label{chap:tempoPlayer}
 \input{Content/TempoPlayer/tempoPlayer}
+\input{Content/TempoPlayer/usageScenario}
 
 \chapter{Iterations and Releases}
 \label{chap:iteration}
