usage scenario tempo player

--- a/Content/TempoPlayer/usageScenario.tex
+++ b/Content/TempoPlayer/usageScenario.tex
@@ -1,1 +1,13 @@
-Usage
+\section{Usage Scenario}
+A typical usage scenario of the Tempo Player could look as such
+
+\begin{enumerate}
+\item The user starts music from the main screen, turns of the screen, and puts the smartphone in a casing, which is located on the user's arm
+\item The user starts walking at a brisk pace
+\item After a while, the non-graphical user interface (NGUI) is used to change to the next song, by tapping twice on the screen
+\subitem Since the application has now calculated the SPM, the next song has a BPM value which fits the user's pace
+\item The user speeds up, and starts jogging at a slow pace
+\item The song finishes, and the application automatically plays the next song which fits the current pace
+\item The user accelerates, and is now running. The screen is tapped twice, and faster music which fits the new pace is played
+\item Finally, the user gradually slows down and eventually stops moving completely. A long press (500 ms) is performed on the screen, and the music stops. The exercise session is over.
+\end{enumerate}
