--- a/Report.tex
+++ b/Report.tex
@@ -21,6 +21,7 @@
 \chapter{Introduction}
 \label{chap:intro}
 \input{Content/Introduction/introduction}
+\Kristian{introduce chapters thing.}
 
 \chapter{Methodology}
 \label{chap:methodology}
