Finished 3rd release. Started 3rd iteration.

--- a/Content/Iteration/2ndIteration.tex
+++ b/Content/Iteration/2ndIteration.tex
@@ -8,12 +8,12 @@ We found out during the 1st iteration that using a screen sharing application to
 
 When working on the code, we realised that the quality was not quite as we wanted it, and we decided to spend more time on refactoring in the future. We still had a deadline to meet, and we had not factored in much time for refactoring during the planning process, resulting in some bad smells being left behind.
 
-\Dan{Evaluer lidt mere på hvorfor det kunne være, at vi ikke fik refaktureret.}
+\Dan{I Methodology Reflections: Evaluer lidt mere på hvorfor det kunne være, at vi ikke fik refaktureret.}
 
 %40 hour work week
 The overall flow of the process improved, and the application was taking shape. It was, however, not taking shape quickly enough, and when we realised we would not be able to finish the release at the pace we were going, we decided to work overtime for a few days. This resulted in getting the job done, but it also reduced our motivation in the days after. Our productivity was lower in the day after, but the task at hand that day was a boring one as well.\\
 
-\Dan{Snak om det her, men pas på med at konkludere for meget - vi kan ikke rigtig sige hvorfor vi var mindre produktive.}
+\Dan{I Methodology Reflections:  Snak om det herover, men pas på med at konkludere for meget - vi kan ikke rigtig sige hvorfor vi var mindre produktive.}
 
 %Planning
 When working on an issue, we found that it was some times hard to manually keep track on how much time was spent on it. This led to us eventually starting to use a time tracking tool, allowing us to more precisely find out how well each issue was estimated. At this point we were still not able to accurately determine our code velocity.\\
