--- a/Content/Iteration/3rdIteration.tex
+++ b/Content/Iteration/3rdIteration.tex
@@ -1,2 +1,2 @@
 \subsection{3rd Iteration}
-Song scanner
+At this point, the application was taking shape: The music player module was done in the previous and we were working to get the song scanner module added, allowing us to use custom music folders.
