--- a/Content/Iteration/release2Intro.tex
+++ b/Content/Iteration/release2Intro.tex
@@ -1,4 +1,4 @@
-With the core music player application completed in the 2nd iteration we outlined the configuration for the 3rd and 4th iterations in the configuration table seen in \Cref{table:config1}, which is based on \citet[ch. 3]{essence:config}. The figure should be read vertically, and is meant to provide an overview; each field is explained in more detail in this section. This approach presents the different aspects of the release, including what problem the application should solve and how, and it provides a basis for further development.
+With the core music player application completed in the 2nd iteration we outlined the configuration for the 3rd and 4th iterations in the configuration table seen in \Cref{table:config1}, which is based on \citet[ch. 3]{essence:config}. The figure should be read vertically, and is meant to provide an overview; each field is explained in more detail in this section. This approach presents the different aspects of the release, including what problem the application should solve and how, and it provides a basis for further development. The configuration table outlines the planned release, and not the finished release.
 
 
 \input{Content/Iteration/configurationTable1}
@@ -30,7 +30,6 @@ With the core music player application completed in the 2nd iteration we outline
 
 \item \textbf{Process Overview}: We evaluate the application from the customer's point of view at the end of each iteration. The evaluation is based on the fulfilment of acceptance tests.
 
-\item \textbf{Process Details}: Many music files do not contain and information about their BPM, and it therefore necessary to find this value elsewhere -- either online, by manual input, or through automatic analysis of the music. \newline
-While running it can be hard to control the application, as there is limited feedback when using a touch screen. Instead it should be possible to use gestures or taps to control the application, giving it a more 
+\item \textbf{Process Details}: While running it can be hard to control the application, as there is limited feedback when using a touch screen. Instead it should be possible to use gestures or taps to control the application, giving it a more 
 consistent user experience.
 \end{itemize}
