music player intro review done

--- a/Content/MusicPlayer/androidTerms.tex
+++ b/Content/MusicPlayer/androidTerms.tex
@@ -4,8 +4,9 @@ When explaining the implementation of the modules, some Android specific terms w
 \subsection*{Activity}
 A screen in the application implemented as a Java class with layout defined as XML. It can handle UI events and call methods.
 
-\subsection*{Fragment}
-A fragment is intended to handle a part of the behaviour and UI of an Activity, especially useful for creating multi-pane UI's and adjusting the application to run on devices with different screen sizes.
+%\subsection*{Fragment}
+%A fragment is intended to handle a part of the behaviour and UI of an Activity, especially useful for creating multi-pane UI's and adjusting the application to run on devices with different screen sizes.
+%\Kristian{No one writes about fragments anyway}
 
 \subsection*{Service}
 A service runs in the background with the purpose of handling long-running, persistent actions, e.g. playing music when the application: is minimised. It does not provide a user interface.
