--- a/Content/MusicPlayer/introduction.tex
+++ b/Content/MusicPlayer/introduction.tex
@@ -1,5 +1,1 @@
-Behind the scenes, Tempo Player consists of a number of modules, each playing an important role in the overall functionality of the application. 
-
-In this chapter the Music Player module is described in terms of user stories and implementation, as well as observations made in regards to XP during development of the module. In \Cref{chap:reflectionMethodology} reflections are made on these observations.
-
-This chapter also contains a brief explanation of Android terms which are necessary to understand this chapter.
+Behind the scenes, Tempo Player consists of a number of modules, each playing an important role in the overall functionality of the application. In the following chapters the module implementations and associated user stories will be presented. In these chapters we will be using Android related to terms describe the modules therefore these will be described first. Then user stories and implementations will for the music player modules be covered.
