use case musicplay song scanner intro review

--- a/Content/MusicPlayer/useCases.tex
+++ b/Content/MusicPlayer/useCases.tex
@@ -1,12 +1,12 @@
 \section{User Stories}
-The following are some of the most interesting user stories used to develop the Music Player module. Some of the stories depend on other modules: it is, for example, not possible to ``Play .mp3 files'' without the Song Scanner, which is described in \Cref{chap:songScanner}.
+The following are the most interesting user stories used to develop the Music Player module. Some of the stories depend on other modules: it is, for example, not possible to ``Play music files'' without the Song Scanner, which is described in \Cref{chap:songScanner}.
 
-\story{Play .mp3 files.}{High}
-{As a user, I, want to listen to the .mp3 files stored on my device.}
+\story{Play music files.}{High}
+{As a user, I, want to listen to the music files stored on my device.}
 {\begin{itemize}
-\item I am able to play a .mp3 file stored on the device.
+\item I am able to play a music file stored on the device.
 \item I am able to regulate the volume when listening to the song.
-\item I am not able to open other file types than .mp3.
+\item I am only able to open music files with the application.
 \end{itemize}}
 
 \story{Navigate songs.}{High}
@@ -27,7 +27,7 @@ It should also be possible to seek in the playing song.}
 \item The music keeps playing after the \texttt{Power} button is pressed.
 \end{itemize}}
 
-\story{Adjust music speed.}{High}
+\story{Adjust music tempo.}{High}
 {As a user, I, want the music to match my pace even when the playing song's tempo is not exactly my pace.}
 {\begin{itemize}
 \item The application must be able to match my pace with appropriate songs, when the smartphone is held in either the hand, the pocket, or on the arm.
