--- a/Bibliography/bibliography.bib
+++ b/Bibliography/bibliography.bib
@@ -193,3 +193,11 @@ eprint = {http://dx.doi.org/10.1076/apab.111.3.211.23464}
     howpublished = "\url{http://developer.echonest.com/index.html}",
     note = "[Online; Accessed 2015-05-22.]"
 }
+
+@book{xp:explored,
+ author = {Wake, William},
+ title = {Extreme Programming Explored},
+ year = {2001},
+ publisher = {Addison-Wesley Professional},
+ edition = {1st}
+} 
