Wrote a bit about 3rd iteration

--- a/Content/Iteration/3rdIteration.tex
+++ b/Content/Iteration/3rdIteration.tex
@@ -1,2 +1,10 @@
 \subsection{3rd Iteration}
 At this point, the application was taking shape: The music player module was done in the previous and we were working to get the song scanner module added, allowing us to use custom music folders.
+
+%Planning
+At the end of 2nd iteration we realised that tracking time spent on an issue by hand was tedious and unreliable, so we switched to using a tool to take care of it for us. The reason for this was to measure how much time we could expect to spend on actual work during an iteration, leading to us having a better idea of our coding velocity, and in fact it helped us predict our future velocity quite precisely. However, we still had problems with estimations of the more difficult issues, resulting in fewer issues than expected being finished.
+
+%Refactoring
+A combination of wanting to progress with new features as fast as possible, and us underestimating the importance of refactoring bad smells as fast as possible resulted in some areas of the code starting to be unclear and hard to understand. That made us agree to dedicate time specifically to getting the code back on track in a future iteration.
+
+%Pair Programming
