use case song scanner review

--- a/Content/SongScanner/intro.tex
+++ b/Content/SongScanner/intro.tex
@@ -2,4 +2,4 @@ In this chapter, the development, implementation of the song scanner are describ
 
 The chapter contains a description of the user stories created, which acted as a basis for the development of the song scanner in regards to the requirements it should fulfil. The interesting aspects of its implementation are also described. 
 
-The song scanner's main responsibilities are to find songs in a directory, look up their BPM online, extract album art from the files, and lastly save them in the database if they do not exist already.
+The song scanner's main responsibilities are to find music files in specified directories, look up their BPM online, extract album art from the files, and lastly save them in the database if they do not exist already.
